<?xml version="1.0"?>
<package format="3">
  <name>the_zucc</name>
  <version>0.0.1</version>
  <description>My ROS2 Python nodes</description>
  <maintainer email="lbuschvogel3@gatech.edu">Lewis Busch-Vogel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

